--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,13 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.kauale.app_identifier"
+        applicationId "com.kauale.app_launcher"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 2
         versionName "1.0.0"
         multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resConfigs "en"
     }
     signingConfigs {
         config {
@@ -45,6 +45,7 @@ android {
 
 dependencies {
     def room_version = "2.2.2"
+    def multidex_version = "2.0.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -52,9 +53,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.room:room-runtime:2.2.5'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
@@ -64,14 +62,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.material:material:1.3.0-alpha01'
-    implementation 'com.google.android.gms:play-services-ads:19.2.0'
-    implementation 'com.google.ads.mediation:facebook:5.9.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
-    implementation project(':nativetemplates')
     def dynamicanimation_version = '1.0.0'
     implementation "androidx.dynamicanimation:dynamicanimation:$dynamicanimation_version"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 }
